# dabi-deploy

./: .env.example  .gitignore  README.md  docker-compose.yml
ingest/: Dockerfile  pyproject.toml  requirements.txt
ingest/dabi_ingest/: __init__.py  __main__.py  checkpoint.py  clients.py  secrets.py
ingest/dabi_ingest/pipelines/: _fdns_common.py  archive.py  consolidate.py  czds.py  openintel_cctld.py  openintel_ctlog.py  openintel_infra.py  openintel_prefix.py  openintel_rdns.py  openintel_toplist.py  openintel_zonefile.py  rir.py  zonestream.py
ingest/tests/: test_fdns_common.py  test_smoke.py
scripts/: backup.sh  bootstrap.sh  install-systemd.sh  install-tls.sh  pull-secrets.sh  pull-web.sh  register-snapshot-repo.sh  replay-init-sql.sh  restore.sh  run-ctlog-pipeline.sh  run-czds-pipeline.sh  run-dns-pipeline.sh  run-openintel-cctld-pipeline.sh  run-openintel-toplist-pipeline.sh  run-openintel-zonefile-pipeline.sh  run-rdns-pipeline.sh  run-rir-pipeline.sh  run-tranco-pipeline.sh  smoke.sh
systemd/: dabi-backup.service  dabi-backup.timer  dabi-cert-renew.service  dabi-cert-renew.timer  dabi-ingest-archive.timer  dabi-ingest-consolidate.timer  dabi-ingest-ctlog.service  dabi-ingest-ctlog.timer  dabi-ingest-czds.service  dabi-ingest-czds.timer  dabi-ingest-dns.service  dabi-ingest-dns.timer  dabi-ingest-openintel-cctld.service  dabi-ingest-openintel-cctld.timer  dabi-ingest-openintel-ctlog.timer  dabi-ingest-openintel-infra.timer  dabi-ingest-openintel-prefix.timer  dabi-ingest-openintel-rdns.timer  dabi-ingest-openintel-toplist.service  dabi-ingest-rdns.timer  (+10 more)
(+17 files in other folders)
